--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -31,6 +31,17 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+
+- name: Install deps
+  run: npm ci
+
+# Add this
+- name: Run tests
+  run: npm run test
+
+- name: Build
+  run: npm run build
+
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
